# lzw-encoder-decoder

./: CMakeLists.txt
include/: Data.h  InputCodeStream.h  LZW.h  OutputCodeStream.h
src/: Data.cpp  Decode.cpp  Encode.cpp  LZW.cpp
